Fix .highlight block on mobile, adapt grid mixins page

--- a/docs/less/blocks/highlight.less
+++ b/docs/less/blocks/highlight.less
@@ -2,8 +2,8 @@
 @import 'style/mixins/respond';
 
 .highlight {
-  margin: 0;
   padding: 0;
+  margin: 0 -15px; // TODO: Use variables for left & right margin
 
   border-width: 1px 0;
   border-style: solid;
